--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "gulp-coffee": "~1.4.1",
     "gulp-watch": "~0.5.0",
     "gulp-less": "~1.2.1",
-    "gulp-util": "~2.2.14",
     "gulp-uglify": "~0.2.1",
     "gulp-connect": "~1.0.5",
     "gulp-minify-css": "~0.3.0",
     "knockout": "~3.0.0",
     "jquery": "~2.1.0",
-    "gulp-browserify": "~0.4.6"
+    "gulp-browserify": "~0.4.6",
+    "gulp-load-plugins": "~0.3.0",
+    "gulp-concat": "~2.1.7",
+    "gulp-plumber": "~0.5.6"
   },
   "dependencies": {
     "express": "~3.4.8"
